# rust-zsh-plugin-cli

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md  cliff.toml  codecov.yml  deny.toml  dist-workspace.toml
.github/: pull_request_template.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release-dist.yml  release-plz.yml  rust.yml  security-audit.yml  typos.yml
src/: cli.rs  command.rs  error.rs  main.rs  name.rs  templates.rs
src/templates/: .gitignore  Makefile  README.md  mkdoc.zsh  name.bash  name.plugin.zsh  name.zplugins.zsh
src/templates/.github/workflows/: shell.yml
src/templates/functions/: name_example
